## $Id: Makefile.am,v 1.2 2005/06/15 21:58:49 mattshelton Exp $
AUTOMAKE_OPTIONS=foreign no-dependencies
EXTRA_DIST = AUTHORS ChangeLog COPYING CREDITS INSTALL pads.8 pads.conf.8 pads-report.8 README

pkgdata_DATA = AUTHORS ChangeLog COPYING CREDITS INSTALL README
man_MANS = pads.8 pads.conf.8 pads-report.8
